--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,10 +17,10 @@ body {
   overflow-x: hidden;
 }
 
-.iconLink {
+/* .iconLink {
   color: gray;
 }
 
 .iconLink:hover {
   color: #57068c;
-}
+} */
